# moyu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.example.toml  pyproject.toml
src/moyu/: __init__.py  cli.py  config.py  errors.py
src/moyu/audio/: __init__.py  base.py  cli.py  errors.py
src/moyu/audio/maoer/: room.py
src/moyu/live_audio/: base.py  cli.py  errors.py
src/moyu/live_audio/bili/: models.py  room.py
src/moyu/live_audio/maoer/: __init__.py  models.py  room.py
